# fastboopmos

./: .gitignore  Cargo.toml  HACKING.md  README.md  devices.yaml  edge.bootchannel  edge.bootchannel.sha256  google-sargo.yaml  oneplus-enchilada.yaml  oneplus-fajita.yaml  samsung-a5.yaml  samsung-gt510.yaml  shift-axolotl.yaml  xiaomi-beryllium.yaml
.github/workflows/: channel-build.yml  frontdoor.yml  nightly-sync.yml  publish-channel.yml
bootprofiles/oneplus-enchilada/: gnome-mobile.bootpro  gnome-mobile.yaml  phosh.bootpro  phosh.yaml  plasma-mobile.bootpro  plasma-mobile.yaml  sxmo-de-sway.bootpro  sxmo-de-sway.yaml
bootprofiles/oneplus-fajita/: gnome-mobile.bootpro  gnome-mobile.yaml  phosh.bootpro  phosh.yaml  plasma-mobile.bootpro  plasma-mobile.yaml  sxmo-de-sway.bootpro  sxmo-de-sway.yaml
bootprofiles/xiaomi-beryllium/: gnome-mobile-ebbg.bootpro  gnome-mobile-ebbg.yaml  gnome-mobile-tianma.bootpro  gnome-mobile-tianma.yaml  phosh-ebbg.bootpro  phosh-ebbg.yaml  phosh-tianma.bootpro  phosh-tianma.yaml  plasma-mobile-ebbg.bootpro  plasma-mobile-ebbg.yaml  plasma-mobile-tianma.bootpro  plasma-mobile-tianma.yaml  sxmo-de-sway-ebbg.bootpro  sxmo-de-sway-ebbg.yaml  sxmo-de-sway-tianma.bootpro  sxmo-de-sway-tianma.yaml
devprofiles/: samsung-a5u-eur.yaml
fastboopmos/: Cargo.toml  build.rs
fastboopmos/src/: artifact.rs  channel.rs  cli.rs  compile.rs  devprofile.rs  index.rs  lib.rs  main.rs  template.rs
fastboopmos/src/cmd/: build.rs  channel.rs  list.rs  mod.rs
infra/frontdoor/: Cargo.toml  Dockerfile  rust-toolchain.toml
infra/frontdoor/crates/frontdoor-core/: Cargo.toml
infra/frontdoor/crates/frontdoor-core/src/: cache_key.rs  content_type.rs  cors.rs  id.rs  lib.rs  range.rs
infra/frontdoor/crates/frontdoor-edge/: Cargo.toml
infra/frontdoor/crates/frontdoor-edge/src/: lib.rs
infra/frontdoor/crates/frontdoor-edge/wit/: world.wit
infra/frontdoor/src/: main.rs
infra/k8s/: kustomization.yaml
infra/tofu/: README.md  main.tf  variables.tf
plans/: build-root-crate.md  frontdoor-wasm.md
scripts/: build_channel.py  open_device_prs.py  sync_bootprofiles.py
tools/: cargo-local.sh
xtask/: Cargo.toml
xtask/src/: frontdoor_dev.rs  (+1 more)
(+20 files in other folders)
