[package]
name = "fastboopmos"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "fastboopmos"
path = "src/lib.rs"

[[bin]]
name = "fastboopmos"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
minijinja = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
