[package]
name = "frontdoor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1"
http = "1"
libc = "0.2"
mime_guess = "2"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
lto = true
