[package]
name = "frontdoor-edge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
frontdoor-core = { path = "../frontdoor-core", default-features = false }
async-lock = "3"
futures-lite = "1.13"
wstd = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
